find_package(Gettext REQUIRED)
if (NOT GETTEXT_MSGMERGE_EXECUTABLE)
MESSAGE(FATAL_ERROR "Please install msgmerge binary")
endif (NOT GETTEXT_MSGMERGE_EXECUTABLE)
if (NOT GETTEXT_MSGFMT_EXECUTABLE)
MESSAGE(FATAL_ERROR "Please install msgmerge binary")
endif (NOT GETTEXT_MSGFMT_EXECUTABLE)

add_subdirectory( bg )
add_subdirectory( nb )
add_subdirectory( tg )
add_subdirectory( be )
add_subdirectory( oc )
add_subdirectory( csb )
add_subdirectory( pl )
add_subdirectory( lt )
add_subdirectory( sk )
add_subdirectory( pt_BR )
add_subdirectory( ml )
add_subdirectory( zh_CN )
add_subdirectory( ku )
add_subdirectory( nn )
add_subdirectory( ru )
add_subdirectory( es )
add_subdirectory( de )
add_subdirectory( lv )
add_subdirectory( sv )
add_subdirectory( km )
add_subdirectory( ro )
add_subdirectory( ko )
add_subdirectory( th )
add_subdirectory( pa )
add_subdirectory( he )
add_subdirectory( ca )
add_subdirectory( zh_TW )
add_subdirectory( it )
add_subdirectory( ne )
add_subdirectory( uk )
add_subdirectory( sl )
add_subdirectory( eo )
add_subdirectory( nl )
add_subdirectory( pt )
add_subdirectory( eu )
add_subdirectory( si )
add_subdirectory( gl )
add_subdirectory( se )
add_subdirectory( fi )
add_subdirectory( nds )
add_subdirectory( fr )
add_subdirectory( ja )
add_subdirectory( ga )
add_subdirectory( tr )
add_subdirectory( el )
add_subdirectory( da )
add_subdirectory( cs )
add_subdirectory( ar )
add_subdirectory( is )
add_subdirectory( et )
